  wrapped objects as parameters with parameter index > 1
* added checks if luacwrap_getdescriptor() fails
* replaced calls to obsolete string.gfind by string.gmatch
* fixed wrapping of already wrapped objects via attach()

1.1.0-1

* Removed C interface from DLL exports and export it via a C interface struct.
  This enables dependant C modules to load luacwrap dynamically via the 
  Lua loader.
* moved rockspeck from make based to builtin based build
* bugfix: remove a referenced value if nil or a number is assigned to 
  a wrapped pointer

1.2.0-1

* support Lua 5.2
* document C interface

1.3.0-1

* API change: removed lib param from LUACWRAP_DEFINESTRUCT and LUACWRAP_DEFINEARRAY macro
* added support for platform dependant basic types (INT, UINT, LONG, ULONG)

1.3.1-1

* etc/mkvs.bat now works with different Lua versions (5.1 - 5.3)
* fixed implementation of parts of the Lua interface (createbuffer, 
  registerarray and registerstruct function)
* better documentation for the Lua API

2.0.0-1

* implement C interface version 2 which exposes access to more internals
  like access to type descriptors, managed object environment and managed object references
* split implementation into more files, move wrapped type functions out of luacwrap.c
* rename luacwrap_type_ functions to luacwrap_mobj_ (mobj = managed objects)
* change signature of luacwrap_getdescriptor_byname, add namelen parameter
* change signature of luacwrap_setenvironment() to return result code
* testluacwrap: remove debug output
* use luaunit as unit test framework
* adjust Makefile.win due to added source files
* fix typo and update html documentation
* rockspec: removed unused build_variables for builtin target
* adjust makefile to changed project structure
* update license info in file headers
* add .gitignore file
* extend V2 C interface by luacwrap_mobj_copy_references_t function ptr
* fix LUACWRAP_DEFINEARRAY macro
* array and struct type descriptors: cache type descriptors of membertypes
