@@ -1,4 +1,4 @@
-[![Build Status](https://travis-ci.org/oberhofer/luacwrap.svg?branch=master)](https://travis-ci.org/oberhofer/luacwrap)
+![build status](https://github.com/{USERNAME}/{REPO}/workflows/{WORKFLOW}/badge.svg)
 [![Build status](https://ci.appveyor.com/api/projects/status/github/oberhofer/luacwrap?svg=true&branch=master)](https://ci.appveyor.com/project/oberhofer/luacwrap/branch/master)
 
 # Introduction
